2010-03-01  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* configure.ac (gcc_cv_as_cfi_directive) [i?86-*-solaris*]:
	Disable cfi directives unless GCC and gas agree on using read-only
	.eh_frame sections for 64-bit.
	* configure: Regenerate.

2010-04-29  Release Manager

	* GCC 4.4.4 released.

2010-04-21  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/43570
	* omp-low.c (scan_sharing_clauses): Don't scan_omp_op
	OMP_CLAUSE_DECL for OMP_CLAUSE_COPYPRIVATE.
	(lower_copyprivate_clauses): Use private var in outer
	context instead of original var.  Make sure the types
	are correct for VLAs.

2010-04-20  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/43337
	* tree-nested.c (convert_nonlocal_omp_clauses): OMP_CLAUSE_PRIVATE
	with non-local decl doesn't need chain.

2010-04-19  Jie Zhang  <jie@codesourcery.com>

	PR target/43662
	* reginfo.c (reinit_regs): Set caller_save_initialized_p
	to false.

2010-04-19 Ira Rosen <irar@il.ibm.com>

	PR tree-optimization/43771
	* tree-vect-analyze.c (vect_supported_load_permutation_p): Check
	that load permutation doesn't have gaps.

2010-04-18  Eric Botcazou  <ebotcazou@adacore.com>

	PR tree-optimization/43769
	* tree-sra.c (bitfield_overlaps_p): If the length of the element is
	self-referential, try to compute an upper bound.

2010-04-08  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	Backport from mainline:
	2009-12-05  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR ada/41912
	* pa/linux-unwind.h (pa32_fallback_frame_state): Set fs->signal_frame
	for signal frames.
	* pa/hpux-unwind.h (pa32_fallback_frame_state): Likewise.

2010-04-08  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR target/43643
	* config/i386/gmon-sol2.c [__x86_64__]: Properly restore %rcx.

2010-04-08  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	Backport from mainline:
	2010-03-22  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR target/38085
	* config/i386/i386.c (x86_function_profiler)
	[!NO_PROFILE_COUNTERS]: Fix typo.